syntax = "proto3";

package idl;
import "cli_to_hub.proto";

service Agent {
    rpc CheckUpgradeStatus (CheckUpgradeStatusRequest) returns (CheckUpgradeStatusReply) {}
    rpc CheckConversionStatus (CheckConversionStatusRequest) returns (CheckConversionStatusReply) {}
    rpc CheckDiskSpace (CheckDiskSpaceRequest) returns (CheckDiskSpaceReply) {}
    rpc AgentExecuteUpgradePrimariesSubStep (UpgradePrimariesRequest) returns (UpgradePrimariesReply) {}
    rpc CreateSegmentDataDirectories (CreateSegmentDataDirRequest) returns (CreateSegmentDataDirReply) {}
    rpc CopyMasterDirectoryToSegmentDirectories (CopyMasterDirRequest) returns (CopyMasterDirReply) {}
    rpc StopAgent(StopAgentRequest) returns (StopAgentReply) {}
}

message UpgradePrimariesRequest {
    string OldBinDir = 1;
    string NewBinDir = 2;
    string NewVersion = 3;
    repeated DataDirPair DataDirPairs = 4;
}

message DataDirPair {
    string OldDataDir = 1;
    string NewDataDir = 2;
    int32  OldPort    = 3;
    int32  NewPort    = 4;
    int32  Content    = 5;
}

message UpgradePrimariesReply {}

message CheckUpgradeStatusRequest {}

message CheckUpgradeStatusReply {
    string ProcessList = 1;
}

message CheckConversionStatusRequest {
    repeated SegmentInfo Segments = 1;
	string Hostname = 2;
}

message SegmentInfo {
	int32 Content  = 1;
	int32 Dbid     = 2;
	string DataDir = 3;
}

message CheckConversionStatusReply {
    repeated PrimaryStatus Statuses = 1;
}

message CreateSegmentDataDirRequest {
	repeated string datadirs = 1;
}

message CreateSegmentDataDirReply {}

message CopyMasterDirRequest {
	string masterDir = 1;
	repeated string datadirs = 2;
}

message CopyMasterDirReply {}

message StopAgentRequest {}
message StopAgentReply {}